# Pulso-AI

./: .claude  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  ISSUE-19-COMPLETE.md  LICENSE  Makefile  README.md  ROADMAP.md  docker-compose.yml
.github/workflows/: ci-cd.yml
clients/: README.md
clients/telefonica-peru/: README.md  config.yaml  dashboard_template.yaml  data_mapping.yaml  homologation_rules.yaml
clients/template/: README.md
core-template/: Dockerfile  README.md  healthcheck.py  pyproject.toml  pytest.ini  requirements.txt
core-template/requirements/: README.md  base.txt  dev.txt  prod.txt
core-template/src/: __init__.py
core-template/src/api/: README.md  __init__.py  dependencies.py  main.py
core-template/src/api/graphql/: schema.py
core-template/src/application/: README.md  __init__.py
core-template/src/application/use_cases/: __init__.py
core-template/src/application/use_cases/dashboard/: generate_dashboard_data.py
core-template/src/application/use_cases/etl/: process_daily_etl.py
core-template/src/domain/: IMPLEMENTATION.md  README.md  __init__.py
core-template/src/domain/entities/: __init__.py  cliente.py  gestion.py  metrica.py
core-template/src/domain/exceptions/: __init__.py  domain_exceptions.py
core-template/src/domain/ports/: README.md  __init__.py
core-template/src/domain/ports/events/: __init__.py  domain_events.py  event_publisher.py
core-template/src/domain/ports/repositories/: __init__.py  base_repository.py  cliente_repository.py  gestion_repository.py
core-template/src/domain/ports/services/: __init__.py  configuration_service.py  metrica_calculator.py  metrica_calculator_service.py  notification_service.py
core-template/src/domain/value_objects/: __init__.py  enums.py  identificadores.py
core-template/src/infrastructure/: README.md  __init__.py
core-template/src/infrastructure/adapters/: __init__.py  bigquery_adapter.py  postgresql_adapter.py
core-template/src/infrastructure/adapters/bigquery/: __init__.py  telefonica_adapter.py
core-template/src/infrastructure/adapters/postgresql/: __init__.py  datamart_adapter.py
core-template/tests/: README.md  conftest.py
core-template/tests/domain/entities/: __init__.py  test_cliente.py
core-template/tests/domain/value_objects/: __init__.py  test_enums.py
docs/: README.md  development.md
docs/architecture/: cohort-aware-pattern.md
frontend/: .eslintrc.cjs  .prettierrc.json  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.test.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: README.md
frontend/src/graphql/: README.md
frontend/src/hooks/: README.md
frontend/src/test/: setup.ts
frontend/src/utils/: README.md
gateway/: README.md  nginx.conf
gateway/static/: index.html
infrastructure/: README.md
infrastructure/frontend/: nginx.conf
infrastructure/frontend/html/: index.html
infrastructure/postgres/: init.sql
infrastructure/secrets/: bigquery-credentials.json
scripts/: README.md  validate_issue_19.py
shared/: README.md
